--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js",
+    "prepare": "yarn prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^3.12.0",
+    "@prisma/client": "3.12",
     "apollo-server": "^3.6.7",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
