--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,15 @@ services:
       NODE_ENV: production
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/postgres?schema=public
 
+  reverse-proxy:
+    image: nginx:alpine
+    container_name: reverse_proxy
+    depends_on:
+        - backend
+    volumes:
+      - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
 
 volumes:
   db:
