--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,6 +27,20 @@ services:
       NODE_ENV: production
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/postgres?schema=public
 
+  reverse-proxy:
+    image: nginx:alpine
+    container_name: reverse_proxy
+    depends_on:
+        - backend
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - /etc/nginx/ssl/cert.pem:/etc/ssl/cert.pem
+      - /etc/nginx/ssl/key.pem:/etc/ssl/key.pem
+    ports:
+      - 80:80
+      - 443:443
+
+
 volumes:
   db:
 
