--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -3,22 +3,26 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-        worker_connections 1024;
+	worker_connections 1024;
 }
 
 http {
     server {
-        listen 80;
+	listen 80;
+    	listen 443 ssl;
+    	ssl_certificate         /etc/ssl/cert.pem;
+    	ssl_certificate_key     /etc/ssl/key.pem;
+
         server_name 127.0.0.1;
-        client_max_body_size 10000M;
+	    client_max_body_size 1000M;
+
 
 
         location /backend/ {
-            proxy_pass          http://backend:4000/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
             proxy_set_header   Host             $host;
+            proxy_pass          http://backend:4000/;
+            proxy_set_header    X-Forwarded-For $remote_addr;
         }
+
     }
 }
