--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "nodemon src/app.js",
     "prepare": "yarn prisma generate"
   },
   "dependencies": {
     "@prisma/client": "3.12",
     "apollo-server": "^3.6.7",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
