--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -17,8 +17,7 @@ http {
 	    client_max_body_size 1000M;
 
 
-
-        location /backend/ {
+        location / {
             proxy_set_header   Host             $host;
             proxy_pass          http://backend:4000/;
             proxy_set_header    X-Forwarded-For $remote_addr;
