--- a/reverse-proxy/nginx.conf
+++ b/reverse-proxy/nginx.conf
@@ -16,10 +16,8 @@ http {
         server_name 127.0.0.1;
 	    client_max_body_size 1000M;
 
-
         location / {
-            proxy_set_header   Host             $host;
-            proxy_pass          http://backend:4000/;
+            proxy_pass          http://backend:4000;
             proxy_set_header    X-Forwarded-For $remote_addr;
         }
 
